# xontrib-init-ssh-agent

./: LICENSE  README.md  pyproject.toml
tests/: test_xontrib.py
xontrib/: init_ssh_agent.py
xontrib-init-ssh-agent/: .copier-answers.yml
xontrib-init-ssh-agent/.github/workflows/: test.yml
