
[project]
name = "xontrib-init-ssh-agent"
version = "1.0.1"
license = {file = "LICENSE"}
description = "Starts the ssh-agent and sources its PID and SOCK. Checks if xonsh already started an agent and updates the environment"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
]
requires-python = ">=3.6"
dependencies = ["xonsh"]
[[project.authors]]
name = "Bithive"
email = "bithive@bithive.space"
[project.readme]
file = "README.md"
content-type = "text/markdown"



[project.urls]

Homepage = "https://github.com/theRealBithive/xontrib-init-ssh-agent"
Documentation = "https://github.com/theRealBithive/xontrib-init-ssh-agent/blob/master/README.md"
Code = "https://github.com/theRealBithive/xontrib-init-ssh-agent"
"Issue tracker" = "https://github.com/theRealBithive/xontrib-init-ssh-agent/issues"




[project.optional-dependencies]
dev = ["pytest>=7.0"]



[build-system]
requires = [
    "setuptools>=61",
    "wheel",               # for bdist package distribution
]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = ["xontrib"]
package-dir = {xontrib = "xontrib"}
platforms = ["any"]
include-package-data = false
[tool.setuptools.package-data]
xontrib = ["*.xsh"]


[tool.isort]
profile = "black"

[tool.black]
include = '\.pyi?$'
force-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.vscode
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | disk-cache.sqlite3
)/
'''
